added airline, gitgutter and surround

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,12 @@
 [submodule "bundle/tarbar"]
 	path = bundle/tarbar
 	url = https://github.com/majutsushi/tagbar
+[submodule "bundle/vim-airline"]
+	path = bundle/vim-airline
+	url = https://github.com/bling/vim-airline.git
+[submodule "bundle/vim-gitgutter"]
+	path = bundle/vim-gitgutter
+	url = https://github.com/airblade/vim-gitgutter.git
+[submodule "bundle/vim-surround"]
+	path = bundle/vim-surround
+	url = https://github.com/tpope/vim-surround.git
